--- a/estilos/princ.css
+++ b/estilos/princ.css
@@ -4,6 +4,42 @@
     box-sizing: border-box;
  }
 
+ @font-face {
+    font-family: 'DC';
+    src: url(../midia/fonts/DcFandom-orr4.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+ }
+
+ @font-face {
+    font-family: 'Gotham';
+    src: url(../midia/fonts/GothamWomans-B8md.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+ }
+
+ @font-face {
+    font-family: 'Superman';
+    src: url(../midia/fonts/NewSuperman-Pzd7.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+ }
+
+  @font-face {
+    font-family: 'Flash';
+    src: url(../midia/fonts/Elements.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+ }
+ 
+  @font-face {
+    font-family: 'Lanterna';
+    src: url(../midia/fonts/GREEN_LANTERN_MOVIE.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+ }
+
+
 body {
     background-image: url(../midia/dcbackground.webp);
     background-attachment: fixed;
@@ -37,6 +73,10 @@ body {
     height: 50px;
     border: none;
     border-radius: 20px;
+    font-family: 'Gotham', sans-serif;
+    font-size: 2rem;
+    overflow: hidden;
+    text-align: center;
 }
 #metropolis {
     width: 90vw;
@@ -56,6 +96,9 @@ body {
     height: 50px;
     border: none;
     border-radius: 20px;
+    font-family: 'Superman', sans-serif;
+    font-size: 2rem;
+    overflow: hidden;
 }
 
 #centralcity{
@@ -76,6 +119,9 @@ body {
     height: 50px;
     border: none;
     border-radius: 20px;
+    font-family: 'Flash', sans-serif;
+    font-size: 2rem;
+    overflow: hidden;
 }
 
 #coastcity{
@@ -96,29 +142,23 @@ body {
     height: 50px;
     border: none;
     border-radius: 20px;
+    font-family: 'Lanterna', sans-serif;
+    font-size: 2rem;
+    overflow: hidden;
 }
 
 #menu {
-    height: 5vh;
+    height: 10vh;
     width: 100vw;
     background-image: linear-gradient(to right,#0000FF, #0000AA, #000000);
     background-attachment: fixed;
+    font-family: 'DC', sans-serif;
 }
 
 #titulo {
-    padding: 5px;
+    padding: 25px;
 }
 
-#menu {
-    height: 5vh;
-    width: 100vw;
-    background-image: linear-gradient(to right,#0000FF, #0000AA, #000000);
-    background-attachment: fixed;
-}
-
-#titulo {
-    padding: 5px;
-}
 
 button.card {
     height: 200px;
