--- a/estilos/princ.css
+++ b/estilos/princ.css
@@ -45,6 +45,17 @@ body {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
+}
+
+main {
+    margin-top: 5vh;
+    width: 100vw;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #3d3b3ba1;
 }
 
 .oculto {
@@ -54,13 +65,9 @@ body {
 }
 
 #gotham {
-    width: 90vw;
+    width: 100vw;
     background-color: #000000;
     color: #dddd00;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
     margin-top: 20px;
     margin-bottom: 20px;
     text-align: center;
@@ -69,7 +76,7 @@ body {
 
 #btngotham {
     transition: 0.3s;
-    width: 90vw;
+    width: 100vw;
     height: 50px;
     border: none;
     border-radius: 20px;
@@ -79,7 +86,7 @@ body {
     text-align: center;
 }
 #metropolis {
-    width: 90vw;
+    width: 100vw;
     background-color: #0004ff;
     color: #dd0000;
     display: flex;
@@ -92,7 +99,7 @@ body {
 }
 
 #btnmetropolis{
-    width: 90vw;
+    width: 100vw;
     height: 50px;
     border: none;
     border-radius: 20px;
@@ -102,7 +109,7 @@ body {
 }
 
 #centralcity{
-    width: 90vw;
+    width: 100vw;
     background-color: #fb5b5b;
     color: #3434ff;
     display: flex;
@@ -115,7 +122,7 @@ body {
 }
 
 #btncentralcity{
-    width: 90vw;
+    width: 100vw;
     height: 50px;
     border: none;
     border-radius: 20px;
@@ -125,7 +132,7 @@ body {
 }
 
 #coastcity{
-    width: 90vw;
+    width: 100vw;
     background-color: rgb(166, 244, 89);
     color: rgb(1, 130, 1);
     display: flex;
@@ -138,7 +145,7 @@ body {
 }
 
 #btncoastcity{
-    width: 90vw;
+    width: 100vw;
     height: 50px;
     border: none;
     border-radius: 20px;
@@ -161,15 +168,23 @@ body {
 
 
 button.card {
+    transition: 0,3s ease;
     height: 200px;
     width: 100px;
     border-radius: 20px;
-    margin: 8x;
-    background-color:white;
+    margin: 20px;
     border: none;
 }
 
 button.card:hover {
-    background-color: #000000;
+    transition: 0.3s;
+    perspective: 1000px;
+    transform: scale(1.2);
+    transform-origin: center;
 }
 
+#flash.card {
+    background-image: url(../midia/imagens/Design\ sem\ nome.png);
+    background-attachment: local;
+    overflow: auto;
+}
