--- a/estilos/generico.css
+++ b/estilos/generico.css
@@ -24,7 +24,7 @@
 body {
   font-family: "Bebas Neue", sans-serif;
   background-color: #ffffff;
-  color: #000000;
+  color: #222;
   transition: background-color 0.3s, color 0.3s;
 }
 
@@ -78,7 +78,7 @@ h2 {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 3.5rem;
 }
 
 table {
@@ -90,7 +90,7 @@ table {
 
 th,
 td {
-  border: 1px solid #0c0c0c;
+  border: 1px solid #F7F7F7;
   padding: 10px;
   text-align: center;
   font-size: 1.2rem;
@@ -106,7 +106,7 @@ ul {
 }
 
 h1, h2 {
-  margin: 40px;
+  margin: 20px;
 }
 
 #img {
@@ -117,6 +117,7 @@ h1, h2 {
 section {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 #img, #descri {
@@ -132,4 +133,15 @@ iframe {
   width: 70vw;
   height: 70vh;
   border-radius: 20px;
+}
+
+.texto {
+  width: 30vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+p {
+  font-size: 2.5rem;
 }
