--- a/estilos/apresentação.css
+++ b/estilos/apresentação.css
@@ -114,3 +114,7 @@ button {
 #btnMary {
     background-image: url(../midia/imagens/Mary.png);
 }
+
+#btnEduarda {
+    background-image: url(../midia/imagens/Eduarda.png);
+}
